--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 <body>
     <head>
         <div class="banner">\
-            <div class="banner-content">
-                <h2 class="headline">Let's make beautiful flowers a part of your life.</h2>
-                <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                <button class="button-primary">Shop Now</button>
-
+            <div>
+                <div class="banner-content">
+                    <h2 class="headline">Let's make beautiful flowers a part of your life.</h2>
+                    <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <button class="button-primary">Shop Now</button>
+    
+                </div>
             </div>
-            <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="">
+            <div>
+                <img class="profile-pic" src="Flower Asset/pngwing 10.png" alt="">
+            </div>
         </div>
             
 
-
-
-        </nav>
 
 
     </head>
